decoupled corpus preprocessing from target similarity computation and implemented the caching mechanism

--- a/notebooks/Untitled.ipynb
+++ b/notebooks/Untitled.ipynb
@@ -2,8 +2,107 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "id": "atmospheric-offering",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 0.05011969,  0.8110531 ,  0.9165594 , -1.4823408 ,  1.3610489 ,\n",
+       "       -0.8881653 , -0.26276103,  1.4573574 , -0.63449824,  1.1140237 ,\n",
+       "       -0.27757594, -0.23053475, -0.9809828 ,  1.2641511 , -0.40403825,\n",
+       "        0.05837515,  0.06119414,  0.24922809,  0.4604079 , -0.39040223,\n",
+       "       -0.40984392,  0.76811445,  0.2929069 , -1.3080232 , -0.3180992 ,\n",
+       "        0.7412674 , -0.97695005, -0.5321001 , -1.4552467 , -0.6089619 ,\n",
+       "       -0.21520767, -0.31683832,  0.586493  , -0.24332634, -1.1799281 ,\n",
+       "       -1.7358267 , -1.1812891 , -1.3521445 , -0.00953087, -0.48640528,\n",
+       "        1.7455444 , -0.98904496,  0.55152214, -0.5512399 ,  0.5831794 ,\n",
+       "       -0.25204682, -0.59964883,  1.7499635 , -0.3576073 ,  0.6488141 ,\n",
+       "       -0.81864566, -0.46214333,  0.12637968,  0.7406014 ,  0.9344699 ,\n",
+       "        2.2777543 ,  1.1981189 ,  1.3628452 , -1.4240344 ,  0.85543376,\n",
+       "        0.2180098 , -1.229408  ,  0.9148555 , -0.88539535, -0.68231523,\n",
+       "        2.4786458 ,  1.2050421 ,  0.02541809,  0.69686383,  0.18337196,\n",
+       "        0.0545129 , -0.5026493 ,  1.6615899 , -0.31647444,  1.0023743 ,\n",
+       "        1.3197376 ,  0.29175878, -0.8461296 , -0.46341866, -0.24222514,\n",
+       "       -0.17299119,  0.08964108, -0.3030672 , -1.0090641 ,  0.351237  ,\n",
+       "        0.12697333,  1.2002413 ,  0.86344445, -0.540059  ,  0.5384297 ,\n",
+       "       -0.37383518, -1.286039  , -0.4024128 , -0.258027  ,  0.81178284,\n",
+       "        0.34347692], dtype=float32)"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import spacy\n",
+    "# Load the spacy model that you have installed\n",
+    "nlp = spacy.load('en_core_web_sm')\n",
+    "# process a sentence using the model\n",
+    "doc = nlp(\"This is some text that I am processing with Spacy\")\n",
+    "# It's that simple - all of the vectors and words are assigned after this point\n",
+    "# Get the vector for 'text':\n",
+    "doc[3].vector\n",
+    "# Get the mean vector for the entire sentence (useful for sentence classification etc.)\n",
+    "doc.vector"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "numeric-honor",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "spacy.tokens.doc.Doc"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type(doc)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "cloudy-interest",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "spacy.tokens.doc.Doc"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type(nlp([token.lemma_ for token in doc if not token.is_stop and not token.is_punct][0]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "dangerous-study",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": 1,
-   "id": "extra-excess",
+   "id": "immediate-principle",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +117,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "thrown-experiment",
+   "id": "premier-consent",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +127,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "enabling-evanescence",
+   "id": "micro-papua",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,7 +137,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "headed-cursor",
+   "id": "deluxe-picture",
    "metadata": {},
    "outputs": [
     {
@@ -60,7 +159,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "assigned-chorus",
+   "id": "maritime-comment",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,7 +172,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "charitable-nevada",
+   "id": "yellow-government",
    "metadata": {},
    "outputs": [
     {
@@ -94,7 +193,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "relevant-aquatic",
+   "id": "engaged-inspiration",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -104,7 +203,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "normal-claim",
+   "id": "strong-printing",
    "metadata": {},
    "outputs": [
     {
@@ -183,7 +282,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "damaged-deposit",
+   "id": "promising-gibson",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -193,7 +292,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "unauthorized-advocacy",
+   "id": "ranging-progress",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -203,7 +302,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "continuous-partner",
+   "id": "addressed-factor",
    "metadata": {},
    "outputs": [
     {
@@ -441,7 +540,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "civic-wheel",
+   "id": "australian-multiple",
    "metadata": {},
    "outputs": [
     {
@@ -468,7 +567,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "monthly-literature",
+   "id": "coastal-density",
    "metadata": {},
    "outputs": [
     {
@@ -490,7 +589,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "surprising-trailer",
+   "id": "patent-repair",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -501,7 +600,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "hydraulic-outline",
+   "id": "revolutionary-portsmouth",
    "metadata": {},
    "outputs": [
     {
@@ -739,7 +838,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "north-intensity",
+   "id": "motivated-madagascar",
    "metadata": {},
    "outputs": [
     {
@@ -760,7 +859,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "stuffed-sperm",
+   "id": "sacred-south",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -770,7 +869,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "electrical-lounge",
+   "id": "entitled-resistance",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -780,7 +879,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "paperback-kenya",
+   "id": "isolated-whale",
    "metadata": {},
    "outputs": [
     {
@@ -798,7 +897,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "continuing-craps",
+   "id": "danish-partnership",
    "metadata": {},
    "outputs": [
     {
@@ -816,7 +915,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "enclosed-threshold",
+   "id": "criminal-monitor",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -826,7 +925,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "subsequent-fifth",
+   "id": "binary-irish",
    "metadata": {},
    "outputs": [
     {
@@ -847,7 +946,7 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "hired-drain",
+   "id": "angry-spotlight",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -857,7 +956,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dangerous-professor",
+   "id": "flush-gnome",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -867,7 +966,7 @@
   {
    "cell_type": "code",
    "execution_count": 40,
-   "id": "simple-facing",
+   "id": "willing-haiti",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -880,7 +979,7 @@
   {
    "cell_type": "code",
    "execution_count": 43,
-   "id": "immediate-conviction",
+   "id": "confused-nomination",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -890,7 +989,7 @@
   {
    "cell_type": "code",
    "execution_count": 50,
-   "id": "blocked-sarah",
+   "id": "civic-kitty",
    "metadata": {},
    "outputs": [
     {
@@ -921,7 +1020,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "armed-newark",
+   "id": "formed-packet",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -929,7 +1028,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "hybrid-chase",
+   "id": "indoor-projection",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -937,7 +1036,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "conditional-school",
+   "id": "adolescent-billy",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -945,7 +1044,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "signed-hanging",
+   "id": "reasonable-economy",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -953,7 +1052,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "attended-plaza",
+   "id": "adult-benefit",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -961,7 +1060,7 @@
   {
    "cell_type": "code",
    "execution_count": 44,
-   "id": "helpful-viewer",
+   "id": "published-hazard",
    "metadata": {
     "collapsed": true,
     "jupyter": {
@@ -1005,7 +1104,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "healthy-consultancy",
+   "id": "active-samba",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1013,7 +1112,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "relevant-interaction",
+   "id": "prime-punishment",
    "metadata": {},
    "outputs": [
     {
@@ -1034,7 +1133,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "proved-enlargement",
+   "id": "tired-beatles",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1042,7 +1141,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "progressive-mechanism",
+   "id": "authentic-wireless",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1050,7 +1149,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "varying-renewal",
+   "id": "annoying-religion",
    "metadata": {},
    "outputs": [
     {
@@ -1071,7 +1170,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "functioning-lodging",
+   "id": "dynamic-honolulu",
    "metadata": {},
    "outputs": [
     {
@@ -1092,7 +1191,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "balanced-tokyo",
+   "id": "vocational-calgary",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1100,7 +1199,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "likely-defeat",
+   "id": "vital-thursday",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1108,7 +1207,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "impressed-jumping",
+   "id": "inappropriate-straight",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1116,7 +1215,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "comprehensive-minister",
+   "id": "worthy-subscription",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1124,7 +1223,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "collected-button",
+   "id": "adopted-working",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1132,7 +1231,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "fallen-hughes",
+   "id": "missing-diameter",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1142,7 +1241,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "contemporary-choice",
+   "id": "funky-newspaper",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1152,7 +1251,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "italian-being",
+   "id": "certain-tunisia",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1162,7 +1261,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "oriented-description",
+   "id": "compatible-howard",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1172,7 +1271,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "authentic-permit",
+   "id": "toxic-design",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1181,7 +1280,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "medium-childhood",
+   "id": "emotional-classics",
    "metadata": {},
    "source": [
     "## Train embeddings"
@@ -1190,7 +1289,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "sixth-grain",
+   "id": "opposite-webmaster",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1200,7 +1299,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "essential-drawing",
+   "id": "known-geneva",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1210,7 +1309,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "scheduled-automation",
+   "id": "boxed-horizon",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1220,7 +1319,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "innocent-thousand",
+   "id": "directed-academy",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1230,7 +1329,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "intimate-benefit",
+   "id": "positive-theorem",
    "metadata": {},
    "outputs": [
     {
@@ -1271,7 +1370,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "tutorial-sheffield",
+   "id": "casual-architecture",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1279,7 +1378,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "ceramic-manchester",
+   "id": "secondary-paradise",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1289,7 +1388,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "animated-welsh",
+   "id": "musical-ending",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1305,7 +1404,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "promotional-center",
+   "id": "valued-bosnia",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1315,7 +1414,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "stuffed-emphasis",
+   "id": "arabic-freeze",
    "metadata": {},
    "outputs": [
     {
@@ -1347,7 +1446,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "filled-inspector",
+   "id": "instructional-penetration",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1357,7 +1456,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "structural-peeing",
+   "id": "universal-fever",
    "metadata": {},
    "outputs": [
     {
@@ -1488,7 +1587,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "serious-collect",
+   "id": "experienced-client",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1499,7 +1598,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "timely-shadow",
+   "id": "economic-cleaning",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1514,7 +1613,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "double-national",
+   "id": "sharp-browse",
    "metadata": {
     "collapsed": true,
     "jupyter": {
@@ -1569,7 +1668,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "found-heritage",
+   "id": "exceptional-assist",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1577,7 +1676,7 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "id": "searching-phoenix",
+   "id": "unnecessary-october",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1587,7 +1686,7 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "growing-jacksonville",
+   "id": "architectural-concord",
    "metadata": {},
    "outputs": [
     {
@@ -1803,7 +1902,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "published-avatar",
+   "id": "vietnamese-oregon",
    "metadata": {},
    "outputs": [],
    "source": []
